LeetCode: Completed Game of Life problem

--- a/notebooks/reddit.ipynb
+++ b/notebooks/reddit.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "def total_cells(\n",
     "    board: List[List[int]],\n",
     "    i: int,\n",
@@ -53,18 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "2"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 167
     }
    ],
    "source": [
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,6 +98,7 @@
     "            j_index = j - 1\n",
     "            increment_count = 1\n",
     "            adj_cell_sum = 0\n",
+    "            cell_state = store[i][j]\n",
     "            \n",
     "            try:\n",
     "                # check the state of surrounding cells in the grid\n",
@@ -107,7 +110,7 @@
     "                    try:\n",
     "                        if ([i, j] != [i_index, j_index] and\n",
     "                            i_index > -1 and j_index > -1):\n",
-    "                            print([i,j], [i_index, j_index])\n",
+    "                            #print([i,j], [i_index, j_index])\n",
     "                            adj_cell_sum = adj_cell_sum + store[i_index][j_index]\n",
     "                    except:\n",
     "                        pass\n",
@@ -125,16 +128,17 @@
     "                pass\n",
     "            \n",
     "            # live cell with fewer than 2 live neighboors\n",
-    "            if store[i][j] == 1 and adj_cell_sum < 2:\n",
+    "            if cell_state == 1 and adj_cell_sum < 2:\n",
     "                board[i][j] = 0\n",
     "            #    \n",
-    "            elif store[i][j] == 1 and (adj_cell_sum == 2 or adj_cell_sum == 3):\n",
+    "            elif cell_state == 1 and (adj_cell_sum == 2 or adj_cell_sum == 3):\n",
     "                board[i][j] = 1\n",
     "            #\n",
-    "            elif store[i][j] == 1 and adj_cell_sum > 3:\n",
+    "            elif cell_state == 1 and adj_cell_sum > 3:\n",
     "                board[i][j] = 0\n",
     "            #\n",
-    "            elif store[i][j] == 0 and adj_cell_sum == 3:\n",
+    "            elif cell_state == 0 and adj_cell_sum == 3:\n",
+    "                print('test')\n",
     "                board[i][j] = 1\n",
     "            \n",
     "            \n",
@@ -145,102 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[0, 1, 0]\n",
-      "[0, 0, 1]\n",
-      "[1, 1, 1]\n",
-      "[0, 0, 0]\n",
-      "\n",
-      "[[0, 1, 0], [0, 0, 1], [1, 1, 1], [0, 0, 0]]\n",
-      "[[0, 1, 0], [0, 0, 1], [1, 1, 1], [0, 0, 0]]\n",
-      "[0, 0] [0, 1]\n",
-      "[0, 0] [1, 0]\n",
-      "[0, 0] [1, 1]\n",
-      "[0, 1] [0, 0]\n",
-      "[0, 1] [0, 2]\n",
-      "[0, 1] [1, 0]\n",
-      "[0, 1] [1, 1]\n",
-      "[0, 1] [1, 2]\n",
-      "[0, 2] [0, 1]\n",
-      "[0, 2] [0, 3]\n",
-      "[0, 2] [1, 1]\n",
-      "[0, 2] [1, 2]\n",
-      "[0, 2] [1, 3]\n",
-      "[1, 0] [0, 0]\n",
-      "[1, 0] [0, 1]\n",
-      "[1, 0] [1, 1]\n",
-      "[1, 0] [2, 0]\n",
-      "[1, 0] [2, 1]\n",
-      "[1, 1] [0, 0]\n",
-      "[1, 1] [0, 1]\n",
-      "[1, 1] [0, 2]\n",
-      "[1, 1] [1, 0]\n",
-      "[1, 1] [1, 2]\n",
-      "[1, 1] [2, 0]\n",
-      "[1, 1] [2, 1]\n",
-      "[1, 1] [2, 2]\n",
-      "[1, 2] [0, 1]\n",
-      "[1, 2] [0, 2]\n",
-      "[1, 2] [0, 3]\n",
-      "[1, 2] [1, 1]\n",
-      "[1, 2] [1, 3]\n",
-      "[1, 2] [2, 1]\n",
-      "[1, 2] [2, 2]\n",
-      "[1, 2] [2, 3]\n",
-      "[2, 0] [1, 0]\n",
-      "[2, 0] [1, 1]\n",
-      "[2, 0] [2, 1]\n",
-      "[2, 0] [3, 0]\n",
-      "[2, 0] [3, 1]\n",
-      "[2, 1] [1, 0]\n",
-      "[2, 1] [1, 1]\n",
-      "[2, 1] [1, 2]\n",
-      "[2, 1] [2, 0]\n",
-      "[2, 1] [2, 2]\n",
-      "[2, 1] [3, 0]\n",
-      "[2, 1] [3, 1]\n",
-      "[2, 1] [3, 2]\n",
-      "[2, 2] [1, 1]\n",
-      "[2, 2] [1, 2]\n",
-      "[2, 2] [1, 3]\n",
-      "[2, 2] [2, 1]\n",
-      "[2, 2] [2, 3]\n",
-      "[2, 2] [3, 1]\n",
-      "[2, 2] [3, 2]\n",
-      "[2, 2] [3, 3]\n",
-      "[3, 0] [2, 0]\n",
-      "[3, 0] [2, 1]\n",
-      "[3, 0] [3, 1]\n",
-      "[3, 0] [4, 0]\n",
-      "[3, 0] [4, 1]\n",
-      "[3, 1] [2, 0]\n",
-      "[3, 1] [2, 1]\n",
-      "[3, 1] [2, 2]\n",
-      "[3, 1] [3, 0]\n",
-      "[3, 1] [3, 2]\n",
-      "[3, 1] [4, 0]\n",
-      "[3, 1] [4, 1]\n",
-      "[3, 1] [4, 2]\n",
-      "[3, 2] [2, 1]\n",
-      "[3, 2] [2, 2]\n",
-      "[3, 2] [2, 3]\n",
-      "[3, 2] [3, 1]\n",
-      "[3, 2] [3, 3]\n",
-      "[3, 2] [4, 1]\n",
-      "[3, 2] [4, 2]\n",
-      "[3, 2] [4, 3]\n",
-      "[[0, 0, 0], [0, 0, 1], [0, 1, 1], [0, 0, 0]]\n",
-      "[[0, 0, 0], [0, 0, 1], [0, 1, 1], [0, 0, 0]]\n",
-      "[0, 0, 0]\n",
-      "[0, 0, 1]\n",
-      "[0, 1, 1]\n",
-      "[0, 0, 0]\n"
+      "[0, 1, 0]\n[0, 0, 1]\n[1, 1, 1]\n[0, 0, 0]\n\n[[0, 1, 0], [0, 0, 1], [1, 1, 1], [0, 0, 0]]\n[[0, 1, 0], [0, 0, 1], [1, 1, 1], [0, 0, 0]]\n[[0, 0, 0], [0, 0, 1], [0, 1, 1], [0, 0, 0]]\n[[0, 0, 0], [0, 0, 1], [0, 1, 1], [0, 0, 0]]\n[0, 0, 0]\n[0, 0, 1]\n[0, 1, 1]\n[0, 0, 0]\n"
      ]
     }
    ],
@@ -264,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,30 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "0\n",
-      "1 0\n",
-      "1\n",
-      "0\n",
-      "2 0\n",
-      "0\n",
-      "0\n",
-      "5 0\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0\n",
-      "2 0\n",
-      "0\n",
-      "0\n",
-      "2 0\n"
+      "0\n1 0\n1\n0\n2 0\n0\n0\n5 0\n1\n1\n1\n1\n0\n2 0\n0\n0\n2 0\n"
      ]
     }
    ],
@@ -367,17 +267,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 172,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 0]\n-1 -1\n-1 0\n-1 1\ntest\n0 1\n[0, 1]\n-1 -1\n-1 0\n-1 1\ntest\n0 1\n[0, 2]\n-1 -1\n-1 0\n-1 1\ntest\n0 1\n[1, 0]\n-1 -1\n-1 0\n-1 1\ntest\n0 1\n[1, 1]\n-1 -1\n-1 0\n-1 1\ntest\n0 1\n[1, 2]\n-1 -1\n-1 0\n-1 1\ntest\n0 1\n[2, 0]\n-1 -1\n-1 0\n-1 1\ntest\n0 1\n[2, 1]\n-1 -1\n-1 0\n-1 1\ntest\n0 1\n[2, 2]\n-1 -1\n-1 0\n-1 1\ntest\n0 1\n[3, 0]\n-1 -1\n-1 0\n-1 1\ntest\n0 1\n[3, 1]\n-1 -1\n-1 0\n-1 1\ntest\n0 1\n[3, 2]\n-1 -1\n-1 0\n-1 1\ntest\n0 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "board = [[0,1,0],[0,0,1],[1,1,1],[0,0,0]]\n",
+    "for i in range(len(board)):\n",
+    "    for j in range(len(board[i])):\n",
+    "        print([i, j])\n",
+    "        count = 1\n",
+    "        i_step = -1\n",
+    "        j_step = -1\n",
+    "\n",
+    "        while True:\n",
+    "            print(i_step, j_step)\n",
+    "            if count % 3 == 0:\n",
+    "                print('test')  \n",
+    "                i_step += 1  \n",
+    "            else:\n",
+    "                j_step += 1\n",
+    "            count += 1\n",
+    "\n",
+    "            if j_step > 1 or i_step > 1:\n",
+    "                break"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 179,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "from copy import deepcopy\n",
+    "from typing import List\n",
+    "\n",
+    "def total_cells(\n",
+    "    board: List[List[int]],\n",
+    "    i: int,\n",
+    "    j: int\n",
+    ") -> List[List[int]]:\n",
+    "    ''' Given a board and cell (i, j) calculate the \n",
+    "    sum of the cell's surrounding cells\n",
+    "    :type board: Lit[List[int]]\n",
+    "    :type j: int\n",
+    "    :type i: int\n",
+    "    :rtype: int\n",
+    "    '''\n",
+    "\n",
+    "    # make a copy of the board\n",
+    "    copy_board = deepcopy(board)\n",
+    "\n",
+    "    for i in range(len(board)):\n",
+    "        for j in range(len(board[i])):\n",
+    "\n",
+    "            i_step = -1\n",
+    "            j_step = -1\n",
+    "            counter = 0\n",
+    "            # store the sum of adjacent cells\n",
+    "            adj_cells_sum = 0\n",
+    "\n",
+    "            # use steps to visit cells adjacent to cell(i,j)\n",
+    "            while True:\n",
+    "                # reset steps and increment counter after j step has increase by 2\n",
+    "                if j_step > 1:\n",
+    "                    j_step = -1\n",
+    "                    i_step += 1\n",
+    "                    counter += 1\n",
+    "\n",
+    "                # condition to break loop\n",
+    "                if counter == 3:\n",
+    "                    break\n",
+    "\n",
+    "                # set the indices for an adjacent cell\n",
+    "                adj_i = i + i_step\n",
+    "                adj_j = j + j_step\n",
+    "                # add adjacent cells state to the store if it within range \n",
+    "                if (adj_i >= 0 and i + adj_i <= len(board) and\n",
+    "                    adj_j >= 0 and j + adj_j <= len(board[i]) and\n",
+    "                    (i, j) != (adj_i, adj_j)):\n",
+    "                    #print(board[adj_i][adj_j])\n",
+    "                    adj_cells_sum += board[adj_i][adj_j]\n",
+    "                \n",
+    "                # incremnt j step to visit next cell\n",
+    "                j_step += 1\n",
+    "                \n",
+    "            print(board[i][j], adj_cells_sum, copy_board[i][j])\n",
+    "            if board[i][j] == 0:\n",
+    "                if adj_cells_sum == 3:\n",
+    "                    copy_board[i][j] = 1\n",
+    "                else:\n",
+    "                    copy_board[i][j] = 0\n",
+    "            if board[i][j] == 1:\n",
+    "                if adj_cells_sum in [2, 3]:\n",
+    "                    copy_board[i][j] = 1\n",
+    "                else:\n",
+    "                    copy_board[i][j] = 0\n",
+    "            #print(board[i][j], adj_cells_sum, copy_board[i][j])\n",
+    "\n",
+    "    print(board)    \n",
+    "    print(copy_board)"
+   ]
   },
   {
    "cell_type": "code",
@@ -410,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.1-final"
   }
  },
  "nbformat": 4,
